Closed
Bug 977540
Opened 9 years ago
Closed 4 years ago
Don't apply detectors to foreign domains
Categories
(Core :: Internationalization, defect, P4)
Core
Internationalization
Tracking
()
RESOLVED
FIXED
mozilla66
Tracking | Status | |
---|---|---|
firefox66 | --- | fixed |
People
(Reporter: hsivonen, Assigned: hsivonen)
References
(Regressed 1 open bug)
Details
Attachments
(2 files)
13.57 KB,
patch
|
emk
:
review+
|
Details | Diff | Splinter Review |
21 bytes,
text/html
|
Details |
Charset menu usage by locale for... Firefox 25: https://bug965707.bugzilla.mozilla.org/attachment.cgi?id=8381393 Firefox 26: https://bug965707.bugzilla.mozilla.org/attachment.cgi?id=8381394 It's not worthwhile to pay attention to the gray rows. Those locales have so few reported sessions a even a couple of sessions with the menu used make the locales sort to the top by session percentage. Looking at the black rows, the top ones are Traditional Chinese and Thai, which accidentally have wrong fallbacks, because the old way that localizations used to define the fallback made it easy to make the error of having the intended fallback in a generic file but having Windows, Mac and *nix-specific files always override the generic file with something unintentional. Firefox 28 fixes Traditional Chinese and Thai. Other than that, the top locales in black are the ones that had detectors available in the menu (off by default for Simplified Chinese and Korean; on by default for Japanese, Russian and Ukrainian) in Firefox 25 and 26. Since the Korean really has a single legacy encoding in practice, other things being equal, one should expect the situation to be similar for Korean, Hebrew and Greek. Yet, it's not. Once versions that no longer offer a Korean detector make it to the release channel, we'll learn if the difference between Korean on one hand and Hebrew and Greek on the other can be attributed to the detector. Also note how the Bulgarian localization is doing much better than Russian or Ukrainian localizations. (The Belarusian one has too few sessions to draw conclusions.) But in any case, now that we have per-TLD baseline guesses from bug 910211, it doesn't really make sense to let the Japanese detector run if the baseline guess isn't Shift_JIS and it doesn't make sense to let the Russian or Ukrainian detector run if the baseline guess isn't windows-1251. (Maybe this could even be stricter: Running the Japanese detector only on .jp, Russian detector only on .ru and Ukrainian detector only on .ua.) We should probably make the detectors scoped that way. And if we do, the current UI no longer makes sense. At most a boolean pref for turning all three on or off would make sense. Once the detectors are scoped not to run on foreign sites, we can assess if they do more harm than good even domestically.
Comment 1•9 years ago
|
||
How about "generic" TLDs (e.g. .com)?
Assignee | ||
Comment 2•9 years ago
|
||
(In reply to Masatoshi Kimura [:emk] from comment #1) > How about "generic" TLDs (e.g. .com)? Whether a localization-dependent detector runs on unlabeled .com/org/net/ needs to be decided. Hence, "*Maybe* this could be stricter" in comment 0.
Updated•9 years ago
|
Priority: -- → P4
Assignee | ||
Comment 3•4 years ago
|
||
(In reply to Masatoshi Kimura [:emk] from comment #1) > How about "generic" TLDs (e.g. .com)? My patch will let detection run on .com/net/org.
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•4 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c161041898618142c69fee09985416bfc01f2b68
Depends on: 1071816
Assignee | ||
Comment 5•4 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=dd33fbc34edb5df103eb70388f9e2520d9a758df
Assignee | ||
Comment 6•4 years ago
|
||
Attachment #9030558 -
Flags: review?(VYV03354)
Updated•4 years ago
|
Attachment #9030558 -
Flags: review?(VYV03354) → review+
Pushed by hsivonen@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a2df400cb88c Avoid running Japanese, Russian and Ukrainian detectors on domains associated with different encoding legacies. r=emk.
Comment 8•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/a2df400cb88c
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox66:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Comment 9•4 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•